# weaver

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
migrations/versions/: 617093e092cc_.py  cd2df5eb4afc_.py  d943c22d1a59_set_up_user_post_tables.py
weaver/: __init__.py  auth.py  forms.py  model.py
weaver/templates/: base.html  index.html  login.html  post.html
weaver/templates/auth/: login.html  register.html
